--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ body{
     background-color: rgb(246, 187, 59);
     padding: 5px;
     border-radius: 7px;
-    margin: 10px;
+    margin-top: 5px;
 }
 .shapeC{
     color: black;
