--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ h4{
     border-radius: 7px;
     color: rgb(40, 40, 75);
     border-style: dashed;
+    opacity: 0.7;
 }
 .App{
     text-align: center;
@@ -49,6 +50,7 @@ h4{
     border-radius: 7px;
     margin-top: 5px;
     border-style: dashed;
+    opacity: 0.7;
 }
 .shapeC{
     color: black;
@@ -58,6 +60,7 @@ h4{
     border-radius:7px ;
     border-style: solid;
     margin: 10px;
+    opacity: 0.8;
     
 }
 #sdata{
