--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,22 @@ h4{
 #btn:hover{
     background-color:grey;
 }
+.data{
+    display: flex;
+    flex-direction: row;
+    width: 300px;
+    justify-content: start;
+    text-align: center;
+}
+.showTime{
+color: #CEC2D8;
+padding: 10px;
+margin: 5px;
+margin-left: 15px;
+margin-right: 9px;
+font-size: large;
+font-weight: 700;
+}
 .getData{
     width: 100px;
     height: 50px;
